# miniature-edge

./: .env.example  .gitignore  README.md  codingstyle.md  context.md  pyproject.toml
alerts/: telegram.py
common/: logging.py  timeframe.py
config/: config.yaml  loader.py  models.py
confirm/: rules.py
exec/: alert_test.py  audit.py  backtest.py  refresh.py  scan.py  smoke.py
features/: store.py
indicators/: basic.py  td.py
ingest/: ccxt_client.py
memory/: alerts.md  backtesting.md  config.md  data.md  decisions.md  glossary.md  memory.md  ops.md  questions.md  roadmap.md  vision.md
memory/architecture/: index.md
memory/concepts/: edge.md  index.md  principles.md  risk-philosophy.md  timeframes.md
memory/methods/: index.md  indicators.md  td-sequential.md
memory/practice/: index.md
memory/reference/: index.md
regime/: cls.py
risk/: model.py
rotation/: scan.py
score/: compose.py
scripts/: run_loop.sh
